fix option content alignment in Solve

--- a/Solution/MVC/wwwroot/css/Question/Solve.css
+++ b/Solution/MVC/wwwroot/css/Question/Solve.css
@@ -35,9 +35,10 @@ body {
     width: 50%;
 }
 label {
-    display: block;
+    display: flex;
+    align-items: center;
     margin: 10px 0;
-    padding: 10px;
+    padding: 15px;
     font-size: 20px;
     width: 100%;
     border-radius: 10px;
@@ -50,8 +51,6 @@ label {
 }
 
 .option input[type="radio"] {
-    appearance: none;
-    align-items: center;
     -webkit-appearance: none;
     width: 15px;
     height: 15px;
@@ -60,7 +59,6 @@ label {
     border-radius: 50%;
     outline: none;
     cursor: pointer;
-    margin-right: 10px;
     flex-shrink: 0;
 }
 
@@ -68,9 +66,9 @@ label {
     background-color: darkorange;
 }
 
-input[type="radio"] {
-    margin: 10px 10px;
-    color: darkorange;
+.option .option-text {
+    display: inline-block;
+    margin-left: 15px;
 }
 
 #submitButton {
